# ConvolutionCuda

./: CMakeLists.txt  README.md  handle_image_header.h  image_types.h  main.cu  tempfile
performance metrics/: cudaExec.txt  cudaTime.txt  run.sh
